feat: add entry trash revival and appeal
